@@ -1,5 +1,12 @@
 2005-02-16  Alan Modra  <amodra@bigpond.net.au>
 
+	* coff-arm.c (coff_arm_is_local_label_name): Warning fix.
+	* elf32-frv.c (frvfdpic_relocs_info_hash): Likewise.
+	* pef.c (bfd_pef_scan): Don't ignore return value of
+	bfd_pef_scan_start_address.
+
+2005-02-16  Alan Modra  <amodra@bigpond.net.au>
+
 	* elf64-ppc.c (ppc64_elf_edit_toc): Skip toc if size is zero.
 	Skip toc reloc adjust if reloc_count is zero.
 
